2005-12-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc: Nitpick: relocation is not based on path, but on
	directory (location).

2005-12-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc (setup_paths): read LILYPOND_RELOCATE_PREFIX

	* stepmake/stepmake/install-targets.make (local-uninstall): idem.

	* stepmake/stepmake/install-out-targets.make (local-install-outfiles): idem.

	* stepmake/stepmake/help2man-targets.make (install-help2man): idem.

	* stepmake/stepmake/generic-vars.make (Module): idem.

	* stepmake/stepmake/executable-targets.make (default): use it.

	* stepmake/bin/install.py (create_dir): new file. Replace install-sh.

	* make/GNUmakefile: don't install make rules.

	* lily/main.cc (setup_paths): don't inspect $PATH for argv0 with
	slashes.
	(prepend_env_path): more verbosity.

2005-12-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* GNUmakefile.in: add dir argument for find command.

	* lily/parser.yy (bass_figure): set_spot() for bass figures. This
	fixes weird line numbers for point & click.

	* lily/source-file.cc (get_counts): init line/column/char counts.

2005-12-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc: remove ARGV0_RELOCATION, instead use --relocate.

2005-12-16  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely, advanced-notation.itely:
	minor fixes from Fredric.  Thanks!

2005-12-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/music-functions-init.ly: add \bar and \clef music function 

	* lily/lily-lexer.cc: idem.

	* lily/parser.yy (FIXME): remove BAR and CLEF.

2005-12-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): doc string argument change.

	* lily/parser.yy (Generic_prefix_music_scm): allow strings as
	function arguments too

	* lily/main.cc (set_relocation): new function.

	* scripts/musicxml2ly.py (convert): add \version

	* lily/tie.cc: remove get_default_attachments()

	* VERSION (PACKAGE_NAME): release 2.7.23
	