@@ -1,3 +1,12 @@
+2005-12-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/grob.cc (suicide): clear dim_caches_.
+
+	* lily/dimension-cache.cc (clear): new function.
+
+	* lily/grob.cc (extent): swap order of min-extent and extent
+	calculations. This fixes hara kiri staves. 
+
 2005-12-19  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/main.cc: Nitpick: relocation is not based on path, but on
